reverted back to attempt to get show/view working

--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -24,8 +24,7 @@
             </li>
 
           <!-- Premium user -->
-          <% } else if(currentUser && currentUser.isPremium()) { %>
-            <li class="nav-item">
+          <% } else if(currentUser && (currentUser.role === "premium" || currentUser.role === "admin")) { %>            <li class="nav-item">
                 <a class="nav-link" href="/users/<%= currentUser.id %>">Profile</a>
               </li>
               <li class="nav-item">
