--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -24,7 +24,8 @@
             </li>
 
           <!-- Premium user -->
-          <% } else if(currentUser && (currentUser.role === "premium" || currentUser.role === "admin")) { %>            <li class="nav-item">
+          <% } else if(currentUser && currentUser.role != "standard") { %>           
+             <li class="nav-item">
                 <a class="nav-link" href="/users/<%= currentUser.id %>">Profile</a>
               </li>
               <li class="nav-item">
@@ -35,6 +36,9 @@
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="/wikis/private">Private Wikis</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/users/collaborations">Collaborations</a>
               </li>
           <% } else { %>
             <li class="nav-item">
