--- a/src/views/static/partials/messages.ejs
+++ b/src/views/static/partials/messages.ejs
@@ -1,19 +1,24 @@
-<% if(messages.error || messages.notice) { %> 
-  
-    <div class="alert alert-<%= messages.error ? 'danger' : 'warning'  %> alert-dismissible fade show" role="alert">        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
+<% if(messages.error || messages.notice) { %>
 
-        <% if(messages.error) { %>
-        Validation errors:
-        <ul>
-          <% messages.error.forEach((err) => { %>
-            <li><%= `${err}` %></li>
-          <% }) %>
-        </ul>
-        <% } else { %>
-            <p><%= messages.notice %></p>
-         <% } %>
-      </div>
+<div class="alert alert-<%= messages.error ? 'danger' : 'warning'  %> alert-dismissible fade show" role="alert">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+
+    <% if(messages.error) { %>
+    Validation errors:
+    <ul>
+      <% messages.error.forEach((err) => { %>
+      <li>
+        <%= `${err}` %>
+      </li>
+      <% }) %>
+    </ul>
+    <% } else { %>
+    <p>
+      <%= messages.notice %>
+    </p>
     <% } %>
+</div>
+<% } %>
