--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -1,54 +1,55 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="/">Blocipedia</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <!-- Standard user -->
-          <% if(currentUser && currentUser.isStandard()) { %>
-            <li class="nav-item">
-              <a class="nav-link" href="/users/<%= currentUser.id %>">Profile</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/users/signout">Sign out</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/wikis">Wikis</a>
-            </li>
+  <div class="container">
+    <a class="navbar-brand" href="/">Blocipedia</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <!-- Standard user -->
+        <% if(currentUser && currentUser.isStandard()) { %>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/<%= currentUser.id %>">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/signout">Sign out</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/wikis">Wikis</a>
+        </li>
 
-          <!-- Premium user -->
-          <% } else if(currentUser && currentUser.role != "standard") { %>           
-             <li class="nav-item">
-                <a class="nav-link" href="/users/<%= currentUser.id %>">Profile</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/users/signout">Sign out</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="/wikis">Wikis</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="/wikis/private">Private Wikis</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/users/collaborations">Collaborations</a>
-              </li>
-          <% } else { %>
-            <li class="nav-item">
-              <a class="nav-link" href="/users/signup">Sign up</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/users/signin">Sign in</a>
-            </li>
-          <% }%>
-        </ul>
-      </div>
+        <!-- Premium user -->
+        <% } else if(currentUser && currentUser.role != "standard") { %>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/<%= currentUser.id %>">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/signout">Sign out</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/wikis">Wikis</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/wikis/private">Private Wikis</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/collaborations">Collaborations</a>
+        </li>
+        <% } else { %>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/signup">Sign up</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/signin">Sign in</a>
+        </li>
+        <% }%>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
