--- a/src/views/wikis/edit.ejs
+++ b/src/views/wikis/edit.ejs
@@ -3,43 +3,36 @@
   <head>
     <% include ../static/partials/head.ejs %>
   </head>
-  <body>
-    <% include ../static/partials/navbar.ejs %>
+    <body>
+      <% include ../static/partials/navbar.ejs %>
+      <main class="container">
+        <h1>Edit Wiki</h1>
+        <form action="/wikis/<%= wiki.id %>/update" method="post">
+          <div class="form-group">
+            <label for="title">Wiki Title</label>
+            <input value="<%= wiki.title %>" type="text" class="form-control" name="title" aria-describedby="titleHelp"
+              placeholder="Enter Title">
+          </div>
+          <div class="form-group">
+            <label for="body">Body</label>
+            <textarea rows="4" class="form-control" name="body" placeholder="Enter Body"><%= wiki.body %></textarea>
+          </div>
+          <% include ../static/partials/baseScripts.ejs %>
 
-    <main class="container">
-
-      <h1>Edit Wiki</h1>
-
-      <form action="/wikis/<%= wiki.id %>/update" method="post">
-        <div class="form-group">
-          <label for="title">Wiki Title</label>
-          <input value="<%= wiki.title %>" type="text" class="form-control" name="title" aria-describedby="titleHelp" placeholder="Enter Title">
-        </div>
-        <div class="form-group">
-          <label for="body">Body</label>
-          <textarea rows="4" class="form-control" name="body" placeholder="Enter Body"><%= wiki.body %></textarea>
-        </div>
-            <% include ../static/partials/baseScripts.ejs %>
-
-
-                 <!-- Make private/public button -->
-                 <% if( currentUser.isPremium() || currentUser.isAdmin() ) { %>
-                    <div class="form-group">
-                        <label for="private">Wiki status</label>
-                        <select class="form-control" name="private">
-                            <option value="false">Public wiki</option>
-                            <option value="true">Private wiki</option>
-                        </select>
-                    </div>
-                 <% } %>
-                <!-- Make private/public button -->
-                    
-                
-        <button type="submit" class="btn btn-primary">Update</button>
-      </form>
-    </main>
-
-    <% include ../static/partials/baseScripts.ejs %>
-
-  </body>
+          <!-- Make private/public button -->
+          <% if( currentUser.isPremium() || currentUser.isAdmin() ) { %>
+            <div class="form-group">
+              <label for="private">Wiki status</label>
+              <select class="form-control" name="private">
+                <option value="false">Public wiki</option>
+                <option value="true">Private wiki</option>
+              </select>
+            </div>
+          <% } %>
+          <br>
+          <button type="submit" class="btn btn-primary">Update</button>
+        </form>
+      </main>
+      <% include ../static/partials/baseScripts.ejs %>
+    </body>
 </html>
