--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -3,58 +3,71 @@
   <head>
     <% include ../static/partials/head.ejs %>
   </head>
-  <body>
-    <% include ../static/partials/navbar.ejs %>
-
-    <main class="container">
+    <body>
+      <% include ../static/partials/navbar.ejs %>
+      <main class="container">
         <% include ../static/partials/messages.ejs %>
         <br>
-      <h1><%= wiki.title %></h1>
-      
-      <% if(currentUser) { %>
-        <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
-        <form style="display:initial" action="/wikis/<%= wiki.id %>/destroy" method="post">
-            <button type="submit" class="btn btn-danger">Delete</button>
-        </form>
-        <% } %>
+        <h1>
+          <%= wiki.title %>
+        </h1>
+        
+        <div class='button-container'>
+          <span class='left-button' style="float:left">
+            <% if(currentUser) { %>
+            <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
+            <form style="display:initial" action="/wikis/<%= wiki.id %>/destroy" method="post">
+              <button type="submit" class="btn btn-danger" style='margin-right: 3.25px'>Delete</button>
+            </form>
+            <% } %>
+          </span>
+
+          <!-- Add Collaborator button -->
+          <span class='right-button' style="float:left" style='padding-left: 25px'>
+            <% if(currentUser.id === wiki.userId || currentUser.isAdmin) { %>
+            <form style="width: 350px" action="/wikis/<%= wiki.id %>/collaborators/create" method="post">
+              <div class="input-group">
+                <button type="submit" class="btn btn-primary" style='margin-right: 3.25px'>+ Add collaborators</button>
+                <input type="text" class="form-control" name="collaborator" placeholder="Enter username">
+              </div>
+            </form>
+            <br>
+            <% } %>
+          </span>
+        </div>
+        <br>
+        <br>
         <hr>
-      <p><%- wiki.body %></p>
-    
-    <!-- Add Collaborator button -->
-    <hr>
-    <br>
-    <% if(currentUser.id === wiki.userId || currentUser.isAdmin) { %>
-      <form style="width: 400px" action="/wikis/<%= wiki.id %>/collaborators/create" method="post">
-      <div class="input-group">
-         <input type="text" class="form-control" name="collaborator" placeholder="Enter username">
-         <button type="submit" class="btn btn-primary">+ Add collaborators</button>
-      </div>
-    </form> 
-    <br>
-    <% } %>
-      
-      <!-- show collaborators in a list -->
-      <h6>Collaborators:</h6>
-      <% if(wiki.collaborators) { %>
-        <ul class="list-group">
+        <div>
+          <p>
+            <%- wiki.body %>
+          </p>
+        </div>
+
+        <!-- show collaborators in a list -->
+        <br>
+        <br>
+        <div class='collabs' style='bottom: 0' style='bottom: 0px'>
+          <p>Collaborators for this wiki:</p>
+          <% if(wiki.collaborators) { %>
+          <ul class="list-group">
             <% wiki.collaborators.forEach((collaborator) => {  %>
+            <br>
             <li class="list-group-item">
-                <p><%= collaborator.User.username %></p>
-                <% if(currentUser && (currentUser.role === "premium" || currentUser.role === "admin")) { %>
-                  <form style="width:25%" action="/wikis/<%= collaborator.wikiId %>/collaborators/<%= collaborator.id %>/delete" method="post">
-                    <button type="submit" class="btn btn-danger">Delete</button>
-                    <input type="hidden" value="<%= collaborator.User.id %>" class="form-control" name="collaborator">
-                  </form>
-                <% } %>
+              <%= collaborator.User.username %>
+              <% if(currentUser && (currentUser.role === "premium" || currentUser.role === "admin")) { %>
+                <form style="float:right" style="float:top" style="width:25%" action="/wikis/<%= collaborator.wikiId %>/collaborators/<%= collaborator.id %>/delete"
+                  method="post">
+                  <button type="submit" class="btn btn-danger">Delete</button>
+                  <input type="hidden" value="<%= collaborator.User.id %>" class="form-control" name="collaborator">
+                </form>
+              <% } %>
             </li>
             <% }) %>
-        </ul>
-        <% } %> 
-
-  <!-- end collaborators in a list -->
-
-          
-    </main>
-    <% include ../static/partials/baseScripts.ejs %>
-  </body>
+          </ul>
+          <% } %>
+        </div>
+      </main>
+      <% include ../static/partials/baseScripts.ejs %>
+    </body>
 </html>
