--- a/src/views/wikis/edit.ejs
+++ b/src/views/wikis/edit.ejs
@@ -24,11 +24,41 @@
             <div class="form-group">
               <label for="private">Wiki status</label>
               <select class="form-control" name="private" type="checkbox">
-                <option value="false" >Public wiki</option>
-                <option value="true">Private wiki</option>
-              </select>
+                  <% if( wiki.private ) { %>
+                    <option value="false">Public wiki</option>
+                    <option selected="selected" value="true">Private wiki</option>
+                  <% } else { %>
+                    <option selected="selected" value="false">Private wiki</option>
+                    <option value="true">Public wiki</option>
+                  <% } %>
+                </select>
             </div>
           <% } %>
+          
+          <!-- show collaborators in a list -->
+        <br>
+        <br>
+        <div class='collabs' style='bottom: 0' style='bottom: 0px'>
+          <p>Collaborators for this wiki:</p>
+          <% if(wiki.collaborators) { %>
+          <ul class="list-group">
+            <% wiki.collaborators.forEach((collaborator) => {  %>
+            <br>
+            <li class="list-group-item">
+              <%= collaborator.User.username %>
+              <% if(currentUser && (currentUser.role === "premium" || currentUser.role === "admin")) { %>
+                <form style="float:right" style="float:top" style="width:25%" action="/wikis/<%= collaborator.wikiId %>/collaborators/<%= collaborator.id %>/delete"
+                  method="post">
+                  <button type="submit" class="btn btn-danger">Delete</button>
+                  <input type="hidden" value="<%= collaborator.User.id %>" class="form-control" name="collaborator">
+                </form>
+              <% } %>
+            </li>
+            <% }) %>
+          </ul>
+          <% } %>
+        </div>
+
           <br>
           <button type="submit" class="btn btn-primary">Update</button>
         </form>
