--- a/src/views/wikis/edit.ejs
+++ b/src/views/wikis/edit.ejs
@@ -47,9 +47,9 @@
             <li class="list-group-item">
               <%= collaborator.User.username %>
               <% if(currentUser && (currentUser.role === "premium" || currentUser.role === "admin")) { %>
-                <form style="float:right" style="float:top" style="width:25%" action="/wikis/<%= collaborator.wikiId %>/collaborators/<%= collaborator.id %>/delete"
+                <form style="float:right"  style="width:25%" action="/wikis/<%= collaborator.wikiId %>/collaborators/<%= collaborator.id %>/delete"
                   method="post">
-                  <button type="submit" class="btn btn-danger">Delete</button>
+                  <button style="float:right" type="submit" class="btn btn-danger">Delete</button>
                   <input type="hidden" value="<%= collaborator.User.id %>" class="form-control" name="collaborator">
                 </form>
               <% } %>
