--- a/src/views/wikis/edit.ejs
+++ b/src/views/wikis/edit.ejs
@@ -35,29 +35,7 @@
             </div>
           <% } %>
           
-          <!-- show collaborators in a list -->
-        <br>
-        <br>
-        <div class='collabs' style='bottom: 0' style='bottom: 0px'>
-          <p>Collaborators for this wiki:</p>
-          <% if(wiki.collaborators) { %>
-          <ul class="list-group">
-            <% wiki.collaborators.forEach((collaborator) => {  %>
-            <br>
-            <li class="list-group-item">
-              <%= collaborator.User.username %>
-              <% if(currentUser && (currentUser.role === "premium" || currentUser.role === "admin")) { %>
-                <form style="float:right"  style="width:25%" action="/wikis/<%= collaborator.wikiId %>/collaborators/<%= collaborator.id %>/delete"
-                  method="post">
-                  <button style="float:right" type="submit" class="btn btn-danger">Delete</button>
-                  <input type="hidden" value="<%= collaborator.User.id %>" class="form-control" name="collaborator">
-                </form>
-              <% } %>
-            </li>
-            <% }) %>
-          </ul>
-          <% } %>
-        </div>
+          <% include ../collabFuntion/show.ejs %>
 
           <br>
           <button type="submit" class="btn btn-primary">Update</button>
